reorganise modules