@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.allOf;
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.co.bluegecko.marine.shared.jassert.Conditions.extracted;
 
-import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
@@ -14,7 +13,7 @@ import org.junit.jupiter.api.Test;
 class ZipFileExtractorTest extends AbstractExtractorTest {
 
 	@Test
-	void testExtractCsvFile() throws IOException, URISyntaxException {
+	void testExtractCsvFile() throws URISyntaxException {
 		var resultMap = new ZipFileExtractor().extract(path(data(), zip()), csvParser());
 		List<ParseResult> results = resultMap.get(DummyType.CSV);
 		assertThat(results)
@@ -22,13 +21,13 @@ class ZipFileExtractorTest extends AbstractExtractorTest {
 				.isNotNull()
 				.hasSize(1);
 
-		assertThat(results.get(0))
+		assertThat(results.getFirst())
 				.is(allOf(extracted(r -> r.file().toString(), "file name", "/dummy-data.csv"),
 						extracted(r -> r.values().size(), "value", 4)));
 	}
 
 	@Test
-	void testExtractCsvFileFromResource() throws IOException, URISyntaxException {
+	void testExtractCsvFileFromResource() throws URISyntaxException {
 		var resultMap = new ZipFileExtractor().extract(path(data(), zip()), csvParser());
 		List<ParseResult> results = resultMap.get(DummyType.CSV);
 		assertThat(results)
@@ -36,13 +35,13 @@ class ZipFileExtractorTest extends AbstractExtractorTest {
 				.isNotNull()
 				.hasSize(1);
 
-		assertThat(results.get(0))
+		assertThat(results.getFirst())
 				.is(allOf(extracted(r -> r.file().toString(), "file name", "/dummy-data.csv"),
 						extracted(r -> r.values().size(), "value", 4)));
 	}
 
 	@Test
-	void testExtractJsonFile() throws IOException, URISyntaxException {
+	void testExtractJsonFile() throws URISyntaxException {
 		var resultMap = new ZipFileExtractor().extract(path(data(), zip()), jsonParser());
 		List<ParseResult> results = resultMap.get(DummyType.JSON);
 		assertThat(results)
@@ -50,13 +49,13 @@ class ZipFileExtractorTest extends AbstractExtractorTest {
 				.isNotNull()
 				.hasSize(1);
 
-		assertThat(results.get(0))
+		assertThat(results.getFirst())
 				.is(allOf(extracted(r -> r.file().toString(), "file name", "/dummy-data.json"),
 						extracted(r -> r.values().size(), "value", 200)));
 	}
 
 	@Test
-	void testExtractTxtFile() throws IOException, URISyntaxException {
+	void testExtractTxtFile() throws URISyntaxException {
 		var resultMap = new ZipFileExtractor().extract(path(data(), zip()), textParser());
 		List<ParseResult> results = resultMap.get(DummyType.TEXT);
 		assertThat(results)
@@ -65,7 +64,7 @@ class ZipFileExtractorTest extends AbstractExtractorTest {
 	}
 
 	@Test
-	void testExtractAllFile() throws IOException, URISyntaxException {
+	void testExtractAllFile() throws URISyntaxException {
 		var resultMap = new ZipFileExtractor().extract(path(data(), zip()),
 				csvParser(), jsonParser(), textParser());
 		assertThat(resultMap.get(DummyType.CSV))
@@ -82,7 +81,7 @@ class ZipFileExtractorTest extends AbstractExtractorTest {
 	}
 
 	@Test
-	void testExtractAllNestedFile() throws IOException, URISyntaxException {
+	void testExtractAllNestedFile() throws URISyntaxException {
 		var resultMap = new ZipFileExtractor().extract(path(nested(), zip()),
 				csvParser(), jsonParser(), textParser());
 		assertThat(resultMap.get(DummyType.CSV))
