@@ -22,7 +22,7 @@ class ZipStreamExtractorTest extends AbstractExtractorTest {
 					.isNotNull()
 					.hasSize(1);
 
-			assertThat(results.get(0))
+			assertThat(results.getFirst())
 					.is(allOf(extracted(r -> r.file().toString(), "file name", "dummy-data.csv"),
 							extracted(r -> r.values().size(), "value", 4)));
 		}
@@ -39,7 +39,7 @@ class ZipStreamExtractorTest extends AbstractExtractorTest {
 					.isNotNull()
 					.hasSize(1);
 
-			assertThat(results.get(0))
+			assertThat(results.getFirst())
 					.is(allOf(extracted(r -> r.file().toString(), "file name", "dummy-data.json"),
 							extracted(r -> r.values().size(), "value", 200)));
 		}
